--- a/apps/api/composer.json
+++ b/apps/api/composer.json
@@ -11,7 +11,8 @@
   ],
   "require": {
     "silex/silex":"~2.0",
-    "jdesrosiers/silex-cors-provider": "v1.4.1"
+    "jdesrosiers/silex-cors-provider": "v1.4",
+    "doctrine/dbal": "~v2.6"
   },
   "require-dev": {
     "phpunit/phpunit": "6.2.3"
@@ -22,6 +23,6 @@
     }
   },
   "autoload-dev" : {
-    "psr-4": { "Leonam\\Tests\\" : "tests/Leonam/Tests" }
+    "psr-4": { "Leonam\\Memed\\Tests\\" : "tests/unit/Memed/Tests" }
   }
 }
