--- a/phpdocker/php-fpm/Dockerfile
+++ b/phpdocker/php-fpm/Dockerfile
@@ -4,6 +4,6 @@ FROM phpdockerio/php71-fpm:latest
 RUN apt-get update \
     && apt-get -y --no-install-recommends install sqlite php7.1-sqlite3 php7.1-mbstring php-xdebug \
     && apt-get clean; rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/* /usr/share/doc/*
-
+RUN sqlite3
 
 WORKDIR "/application"
