instalacao e setup inicial para testes de api com o codeception

--- a/apps/api/composer.json
+++ b/apps/api/composer.json
@@ -15,7 +15,8 @@
     "doctrine/dbal": "~v2.6"
   },
   "require-dev": {
-    "phpunit/phpunit": "6.2.3"
+    "phpunit/phpunit": "6.2.3",
+    "codeception/base": "*"
   },
   "autoload":{
     "psr-4":{
