validando retorno do enpoint de medicamentos

--- a/apps/api/tests/api.suite.yml
+++ b/apps/api/tests/api.suite.yml
@@ -1,4 +1,7 @@
 actor: ApiTester
 modules:
     enabled:
-        - \Helper\Api
+        - REST:
+            url: http://api.desafio-memed.dev:8080
+            depends: PhpBrowser
+            part: Json
