--- a/apps/api/composer.json
+++ b/apps/api/composer.json
@@ -16,7 +16,7 @@
   },
   "require-dev": {
     "phpunit/phpunit": "6.2.3",
-    "codeception/base": "*"
+    "codeception/codeception": "*"
   },
   "autoload":{
     "psr-4":{
