Ajustando confs do container (nginx) da app web

--- a/phpdocker/nginx/frontend.conf
+++ b/phpdocker/nginx/frontend.conf
@@ -1,42 +1,20 @@
 server {
-    listen 80 default;
+    listen   8081;
 
-    server_name desafio-memed.dev
-    server_alias admin.desafio-memed.dev
+    server_name admin.desafio-memed.dev
 
     client_max_body_size 108M;
-
     access_log /var/log/nginx/application.access.log;
 
     root /frontend;
+    index index.html index.php;
 
-    try_files $uri @rewriteapp;
-
-    location @rewriteapp {
-        index index.html;
-    }
-
-    # Deny all . files
-    location ~ /\. {
-        deny all;
-    }
-
-    location ~ ^/(index|index_dev)\.php(/|$) {
-        fastcgi_pass php-fpm:9000;
-        fastcgi_split_path_info ^(.+\.php)(/.*)$;
+    location ~ \.php$ {
+        try_files $uri =404;
+        fastcgi_split_path_info ^(.+\.php)(/.+)$;
+        fastcgi_pass unix:/var/run/php5-fpm.sock;
         fastcgi_index index.php;
-        send_timeout 1800;
-        fastcgi_read_timeout 1800;
-        fastcgi_param  SCRIPT_FILENAME $document_root$fastcgi_script_name;
-        fastcgi_param PHP_VALUE "error_log=/var/log/nginx/application_php_errors.log";
-        fastcgi_buffers 16 16k;
-        fastcgi_buffer_size 32k;
+        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
         include fastcgi_params;
     }
-
-    # Statics
-        location /(bundles|media) {
-        access_log off;
-        expires 30d;
-        try_files $uri @rewriteapp;
-    }}
+}
