alterando configurações para a webapp (nginx)

--- a/phpdocker/nginx/frontend.conf
+++ b/phpdocker/nginx/frontend.conf
@@ -1,7 +1,8 @@
 server {
-    listen   8081;
+    listen   80;
 
-    server_name admin.desafio-memed.dev
+    server_name memed.dev
+    server_alias admin.memed.dev
 
     client_max_body_size 108M;
     access_log /var/log/nginx/application.access.log;
@@ -9,10 +10,20 @@ server {
     root /frontend;
     index index.html index.php;
 
-    location ~ \.php$ {
-        try_files $uri =404;
-        fastcgi_split_path_info ^(.+\.php)(/.+)$;
-        fastcgi_pass unix:/var/run/php5-fpm.sock;
+    try_files $uri @rewriteapp;
+    index index.html;
+    location @rewriteapp {
+        rewrite ^(.*)$ /index.html last;
+    }
+
+    # Deny all . files
+    location ~ /\. {
+        deny all;
+    }
+
+    location ~ ^/(index|index_dev)\.php(/|$) {
+        fastcgi_pass php-fpm:9000;
+        fastcgi_split_path_info ^(.+\.php)(/.*)$;
         fastcgi_index index.php;
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
         include fastcgi_params;
