--- a/apps/api/composer.json
+++ b/apps/api/composer.json
@@ -12,7 +12,8 @@
   "require": {
     "silex/silex":"~2.0",
     "jdesrosiers/silex-cors-provider": "v1.4",
-    "doctrine/dbal": "~v2.6"
+    "doctrine/dbal": "~v2.6",
+    "respect/validation": "~1.1.12"
   },
   "require-dev": {
     "phpunit/phpunit": "6.2.3",
